fixing spacing iphone 6 plus

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1564,7 +1564,7 @@ FIM
 
 
 .logo-black {
-  margin: 20px auto;
+  margin: 19px auto;
 }
 
 .cd-headline {
